--- a/_posts/2012-10-29-customer-collaboration-over-contract-negotiation.html
+++ b/_posts/2012-10-29-customer-collaboration-over-contract-negotiation.html
@@ -5,7 +5,7 @@ date: 2012-10-29 02:44:38.000000000 -04:00
 type: post
 published: true
 status: publish
-categories: []
+categories: Agile
 tags:
 - Agile
 - Customer collaboration
