--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <article>
   <header>
-    <h2>We Create Software Solutions To Your Business Problems.</h2>
+    <h2>We create Software Solutions to your Business Problems.</h2>
     <p>
       QSys, Inc. is a software development company. We specialize in creating
       technological solutions to complex business problems.
